<resources>
    <string name="app_name">BookSwap Community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">user email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myProfile">my Profile</string>
    <string name="menu_messenger">messenger</string>
    <string name="menu_addBook">Add book</string>
    <string name="menu_myBook">My book</string>
    <string name="menu_logOut">Log OUt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>