<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/baseline_person_pin_24"
            android:title="@string/menu_myProfile" />
        <item
            android:id="@+id/nav_addBook"
            android:icon="@drawable/baseline_library_books_24"
            android:title="@string/menu_addBook" />
        <item
            android:id="@+id/nav_messenger"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/menu_messenger" />
        <item
            android:id="@+id/nav_myBooks"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_myBook" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="Logout" />
    </group>
</menu>