<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalproject.AddBook.home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myProfile"
        android:name="com.example.finalproject.ui.myprofile.myProfile"
        android:label="@string/menu_myProfile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_addBook"
        android:name="com.example.finalproject.AddBook.addbook"
        android:label="@string/menu_addBook"
        tools:layout="@layout/fragment_addbook" />
    <fragment
        android:id="@+id/nav_messenger"
        android:name="com.example.finalproject.ui.messenger.messenger"
        android:label="@string/menu_messenger"
        tools:layout="@layout/fragment_messenger" />
    <fragment
        android:id="@+id/nav_myBooks"
        android:name="com.example.finalproject.ui.myBooks.Mybook"
        android:label="@string/menu_myBook"
        tools:layout="@layout/fragment_mybook" />
</navigation>